--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 26
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.bigkoo.pickerviewdemo"
-        minSdkVersion 14
-        targetSdkVersion 26
+        minSdkVersion 24
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -16,7 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions{
+    lintOptions {
         checkReleaseBuilds false
         abortOnError false
     }
@@ -25,8 +26,8 @@ android {
 dependencies {
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':pickerview')
-//   implementation 'com.contrarywind:Android-PickerView:4.1.9'
-//    implementation 'com.contrarywind:wheelview:4.1.0'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+//   implementation 'com.com.contrarywind:Android-PickerView:4.1.9'
+//    implementation 'com.com.contrarywind:wheelview:4.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.code.gson:gson:2.7'
 }
