--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@
 buildscript {
     repositories {
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            url "https://maven.aliyun.com/repository/public"
         }
-        jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
 //        classpath "com.novoda:bintray-release:0.9.1"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,11 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            url "https://maven.aliyun.com/repository/public"
         }
+        google()
     }
 }
 
