--- a/pickerview/build.gradle
+++ b/pickerview/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
 //apply plugin: 'com.novoda.bintray-release'//添加JCenter插件
 
 
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 30
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 26
+        minSdkVersion 24
+        targetSdkVersion 30
         versionCode 34
         versionName "4.1.9"
     }
@@ -34,8 +36,8 @@ android {
 //    }
 //}
 //publish {
-//    userOrg = 'contrarywind'//bintray.com 用户名/组织名 user/org name
-//    groupId = 'com.contrarywind'//JCenter上显示的路径 path
+//    userOrg = 'com.contrarywind'//bintray.com 用户名/组织名 user/org name
+//    groupId = 'com.com.contrarywind'//JCenter上显示的路径 path
 //    artifactId = 'Android-PickerView'//项目名称 project name
 //    publishVersion = '4.1.9'//版本号 version code
 //    desc = 'this is a pickerview for android'//项目描述 description
@@ -45,6 +47,6 @@ android {
 dependencies {
 //    compile fileTree(include: ['*.jar'], dir: 'libs')
     api project(path: ':wheelview')
-//    api 'com.contrarywind:wheelview:4.1.0'
-    implementation 'com.android.support:support-annotations:28.0.0'
+//    api 'com.com.contrarywind:wheelview:4.1.0'
+    implementation 'androidx.annotation:annotation:1.0.0'
 }
